Changelog
=========

1.13.11 (unreleased)
--------------------

- Add missing kwarg 'realtive' to getURL (flare). [mathias.leimgruber]


1.13.10 (2021-12-06)
--------------------

- Change translations for path restricted results. [mathias.leimgruber]


1.13.9 (2021-11-09)
-------------------

- Do not touch search term in default search (plone 5). [mathias.leimgruber]


1.13.8 (2021-06-08)
-------------------

- Fix render issues if we get a random query string. [mathias.leimgruber]


1.13.7 (2021-02-26)
-------------------

- Fix location hash with dot removes hash character [Nachtalb]


1.13.6 (2020-11-17)
-------------------

- Only use ajax pagination on search view. [mathias.leimgruber]


1.13.5 (2020-11-11)
-------------------

- Fix possible double slash if base url exists [mathias.leimgruber]


1.13.4 (2020-06-11)
-------------------

- Support plone 5 paginator new html structure on search result page. [mathias.leimgruber]


1.13.3 (2020-01-21)
-------------------

- Fix broken upgrade step introduced in 1.13.2. [mathias.leimgruber]


1.13.2 (2019-12-17)
-------------------

- Add max width for search result overlay on desktop computers. [busykoala]
- Fix livesearch on contentish [Nachtalb]
- Provide precompiled bundle [Nachtalb]


1.13.1 (2019-10-21)
-------------------

- Fix classifier - since it has to be in https://pypi.org/classifiers/. [mathias.leimgruber]


1.13.0 (2019-10-21)
-------------------

- Add Plone 5.1.x support [mathias.leimgruber]
- Drop AT support [mathias.leimgruber]
- Drop Wordcloud portlet (nowhere in use) [mathias.leimgruber]


1.12.1 (2019-10-17)
-------------------

- Remove searchterm highlighter word filter [Nachtalb]
- Fix rst syntax of readme [Nachtalb]


1.12.0 (2019-04-23)
-------------------

- Use binary adder from collective.solr. They work since version 5.0.3 [mathias.leimgruber]


1.11.0 (2019-04-11)
-------------------

- Accessibility: Don't use "cite" for breadcrumbs in results, use a list [mathias.leimgruber]
