@@ -1,1 +1,1 @@
-!function(e){"use strict";function t(e){r(),$(i+" .active").removeClass("active"),e.addClass("active accessibility-tab-focus").focus()}function r(){$(".accessibility-tab-focus").removeClass("accessibility-tab-focus")}function s(e){o=e,$(i+" .filter").not(e).find(".facets").hide(),e.find(".facets").show().attr("aria-hidden",!1)}function n(e){$(i+" .filter").not(e).find(".facets").hide();var t=e.find(".facets");t.toggle().attr("aria-hidden","true"!==t.attr("aria-hidden"))}function a(){t(o.find(">a")),$(i+" .facets").hide().attr("aria-hidden",!0)}var i="#filter-form",c={filter:null,currentFacet:null,facets:[],next:function(){this.currentFacet===this.facets.length-1?this.currentFacet=0:this.currentFacet++,this.focus()},prev:function(){0===this.currentFacet?this.currentFacet=this.facets.length-1:this.currentFacet--,this.focus()},init:function(e){this.filter=e,this.currentFacet=0,this.facets=e.find(".facet"),this.focus()},focus:function(){t(this.facets.eq(this.currentFacet))}},o=$();$(document).on("click",function(e){var t=$(e.target);t.hasClass("filter")||t.parent().hasClass("filter")||(a(),r())}),$(document).on("click",".filter",function(e){var t=$(e.currentTarget);$(e.target).parent().hasClass("filter")&&(e.preventDefault(),n(t))}),$(document).on("keydown",".filter",function(e){var t=$(e.currentTarget),n=$(e.target);if(n.parents().hasClass("filter"))switch(e.which){case $.ui.keyCode.DOWN:e.preventDefault(),n.hasClass("facet")?c.next():(s(t),c.init(t));break;case $.ui.keyCode.UP:e.preventDefault(),c.prev();break;case $.ui.keyCode.RIGHT:e.preventDefault(),s(t),c.init(t);break;case $.ui.keyCode.LEFT:e.preventDefault(),a();break;case $.ui.keyCode.ESCAPE:e.preventDefault(),a(),r();break;case $.ui.keyCode.ENTER:n.hasClass("filter")&&(e.preventDefault(),s(t),c.init(t))}})}(window),define("facets",function(){}),function(e){var t,r,s,n;t=function(t){e.extend(this,t),this.terms=this.cleanTerms(this.terms.length?this.terms:this.getSearchTerms())},t.prototype={highlight:function(t){if(this.terms.length&&t.length){var r=this;e.each(this.terms,function(e,s){t.find("*:not(textarea)").andSelf().contents().each(function(){3===this.nodeType&&r.highlightTermInNode(this,s)})})}},highlightTermInNode:function(t,r){var s,n,a,i,c=t.nodeValue,o=this;if(!e(t).parent().hasClass(o.highlightClass))for(s=function(t){return e('<span class="'+o.highlightClass+'">&nbsp;</span>').text(t)},n=o.caseInsensitive;c&&(a=(n?c.toLowerCase():c).indexOf(r))>-1;)e(t).before(document.createTextNode(c.substr(0,a))).before(s(c.substr(a,r.length))).before(document.createTextNode(c.substr(a+r.length))),i=t.previousSibling,e(t).remove(),t=i,c=t.nodeValue},queryStringValue:function(e,t){var r,s;if(e.indexOf("?")<0)return"";for(e=e.substr(e.indexOf("?")+1);e.indexOf("=")>=0;)if(e=e.replace(/^\&*/,""),s=e.split("&",1)[0],e=e.substr(s.length),r=s.match(t))return decodeURIComponent(r[r.length-1].replace(/\+/g," "));return""},termsFromReferrer:function(){var t,r,s;if(!(t=null!==e.fn.highlightSearchTerms._test_referrer?e.fn.highlightSearchTerms._test_referrer:document.referrer))return"";for(r=0;r<this.referrers.length;r+=1)if(s=this.referrers[r],t.match(s.address))return this.queryStringValue(t,s.key);return""},cleanTerms:function(t){var r=this;return e.unique(e.map(t,function(t){return t=e.trim(r.caseInsensitive?t.toLowerCase():t),!t||r.filterTerms.test(t)?null:t}))},getSearchTerms:function(){var t=[],r=null!==e.fn.highlightSearchTerms._test_location?e.fn.highlightSearchTerms._test_location:location.href;return this.useReferrer&&e.merge(t,this.termsFromReferrer().split(/\s+/)),this.useLocation&&e.merge(t,this.queryStringValue(r,this.searchKey).split(/\s+/)),t}},r=function(e){return"string"==typeof e?new RegExp("^"+e+"=(.*)$","i"):e},s=function(e){return"string"==typeof e?new RegExp("^https?://(www\\.)?"+e,"i"):e},e.fn.highlightSearchTerms=function(a){if(a=e.extend({},n,a),a=e.extend(a,{searchKey:r(a.searchKey),referrers:e.map(a.referrers,function(e){return{address:s(e.address),key:r(e.key)}})}),a.includeOwnDomain){var i=null!==e.fn.highlightSearchTerms._test_location?e.fn.highlightSearchTerms._test_location:location.hostname;a.referrers.push({address:s(i.replace(/\./g,"\\.")),key:a.searchKey})}return new t(a).highlight(this),this},e.fn.highlightSearchTerms.referrers=[{address:"google\\.",key:"q"},{address:"search\\.yahoo\\.",key:"p"},{address:"search\\.msn\\.",key:"q"},{address:"search\\.live\\.",key:"query"},{address:"search\\.aol\\.",key:"userQuery"},{address:"ask\\.com",key:"q"},{address:"altavista\\.",key:"q"},{address:"feedster\\.",key:"q"}],n={terms:[],useLocation:!0,searchKey:"(searchterm|SearchableText)",useReferrer:!0,referrers:e.fn.highlightSearchTerms.referrers,includeOwnDomain:!1,caseInsensitive:!0,filterTerms:/(not|and|or)/i,highlightClass:"highlightedSearchTerm"},e.fn.highlightSearchTerms._test_location=null,e.fn.highlightSearchTerms._test_referrer=null,e.fn.highlightSearchTerms._highlighter=t}(jQuery),jQuery(function(e){e(".searchResults").highlightSearchTerms({includeOwnDomain:!1})}),define("jquery.highlightsearchterms",function(){}),function(){"use strict";var e=!1,t=function(e,t){void 0!==t.item&&t.item.currentFolder&&e.preventDefault()},r=function(t,r){if(r.item.currentFolder){t.preventDefault();var s=$(t.currentTarget).find("#live_searchbox_currentfolder_only");$("#searchbox_currentfolder_only");s.trigger("change"),e=!0}else window.location=r.item.url},s=function(){var s=$(".searchField");if($(".searchField").length){s.val("");var n=1===$("base").length?$("base").attr("href"):$("body").data("base-url"),a={source:n.replace(/\/$/,"")+"/ftw_solr_livesearch_reply",minLength:3,select:r,focus:t,appendTo:".LSBox",messages:{noResults:$("#search-no-results-message").text(),results:function(e){return e-=$(".ui-menu-item .no-result").length,0!==e?($("#search-no-results-message").attr("aria-hidden",!0),e>1?($("#search-amount-results-found-message").attr("aria-hidden",!1),e+$("#search-amount-results-found-message").text()):($("#search-one-result-found-message").attr("aria-hidden",!1),e+$("#search-one-result-found-message").text())):($("#search-amount-results-found-message").attr("aria-hidden",!0),$("#search-one-result-found-message").attr("aria-hidden",!0),$("#search-no-results-message").attr("aria-hidden",!1),$("#search-no-results-message").text())}}},i=function(e,t){var r=this;1!==$("body.portaltype-plone-site").length&&t.unshift({firstOfGroup:!1,currentFolder:!0,title:"Current folder",url:""}),$.each(t,function(t,s){r._renderItemData(e,s)}),$("#searchbox_currentfolder_only",e).attr("id","live_searchbox_currentfolder_only"),$("[for='searchbox_currentfolder_only']",e).attr("for","live_searchbox_currentfolder_only"),$(".folder_path",e).on("change",function(){this.checked?r.option("source",a.source+"?path="+this.value):r.option("source",a.source),$("#currentfolder_item .folder_path").prop("checked",this.checked),r.search()})},c=function(e,t){var r={label:t.title,value:t.title,url:t.url};if(t.currentFolder)return r.currentFolder=!0,e.append($("#currentfolder_item").children().clone().data("ui-autocomplete-item",r));var s,n=$("<li>").data("ui-autocomplete-item",r),a=$("<a>").attr("href",t.url).addClass(t.cssclass),i=$("<span>").text(t.title).addClass("title");s="no-result"==t.cssclass?t.description?$("<span>"+t.description+"</span>"):$("<span />"):$("<span>").text($("<div />").html(t.description).text()),s.addClass("description");var c=$("<div>").append(i).append(s);if(t.firstOfGroup){n.addClass("firstOfGroup");var o=$("<span>").text(t.type).addClass("group");n.append(o)}return a.append(t.icon).append(c),n.append(a),e.append(n)},o=$.ui.autocomplete(a,s);o._renderItem=c,o._renderMenu=i,s.on("focus",function(){o.search()}),$(".folder_path").prop("checked",!1);var h=o.close;o.close=function(t){t&&"blur"===t.type||e?t.preventDefault():h.call(o)},$(document).on("mousedown click",function(t){e=!1,$(t.target).is("#searchGadget")||$(t.target).parents(".ui-autocomplete").length||o.close()})}};$(s)}(window),define("livesearch",function(){}),require(["facets","jquery.highlightsearchterms","livesearch"],function(e,t,r){}),define("main",function(){});
+!function(e){"use strict";function t(e){r(),$(i+" .active").removeClass("active"),e.addClass("active accessibility-tab-focus").focus()}function r(){$(".accessibility-tab-focus").removeClass("accessibility-tab-focus")}function s(e){o=e,$(i+" .filter").not(e).find(".facets").hide(),e.find(".facets").show().attr("aria-hidden",!1)}function n(e){$(i+" .filter").not(e).find(".facets").hide();var t=e.find(".facets");t.toggle().attr("aria-hidden","true"!==t.attr("aria-hidden"))}function a(){t(o.find(">a")),$(i+" .facets").hide().attr("aria-hidden",!0)}var i="#filter-form",c={filter:null,currentFacet:null,facets:[],next:function(){this.currentFacet===this.facets.length-1?this.currentFacet=0:this.currentFacet++,this.focus()},prev:function(){0===this.currentFacet?this.currentFacet=this.facets.length-1:this.currentFacet--,this.focus()},init:function(e){this.filter=e,this.currentFacet=0,this.facets=e.find(".facet"),this.focus()},focus:function(){t(this.facets.eq(this.currentFacet))}},o=$();$(document).on("click",function(e){var t=$(e.target);t.hasClass("filter")||t.parent().hasClass("filter")||(a(),r())}),$(document).on("click",".filter",function(e){var t=$(e.currentTarget);$(e.target).parent().hasClass("filter")&&(e.preventDefault(),n(t))}),$(document).on("keydown",".filter",function(e){var t=$(e.currentTarget),n=$(e.target);if(n.parents().hasClass("filter"))switch(e.which){case $.ui.keyCode.DOWN:e.preventDefault(),n.hasClass("facet")?c.next():(s(t),c.init(t));break;case $.ui.keyCode.UP:e.preventDefault(),c.prev();break;case $.ui.keyCode.RIGHT:e.preventDefault(),s(t),c.init(t);break;case $.ui.keyCode.LEFT:e.preventDefault(),a();break;case $.ui.keyCode.ESCAPE:e.preventDefault(),a(),r();break;case $.ui.keyCode.ENTER:n.hasClass("filter")&&(e.preventDefault(),s(t),c.init(t))}})}(window),define("facets",function(){}),function(e){var t,r,s,n;t=function(t){e.extend(this,t),this.terms=this.cleanTerms(0!==this.terms.length?this.terms:this.getSearchTerms())},t.prototype={highlight:function(t){if(this.terms.length&&t.length){var r=this;e.each(this.terms,function(e,s){t.find("*:not(textarea)").andSelf().contents().each(function(){3===this.nodeType&&r.highlightTermInNode(this,s)})})}},highlightTermInNode:function(t,r){var s,n,a,i,c=t.nodeValue,o=this;if(!e(t).parent().hasClass(o.highlightClass))for(s=function(t){return e('<span class="'+o.highlightClass+'">&nbsp;</span>').text(t)},n=o.caseInsensitive;c&&(a=(n?c.toLowerCase():c).indexOf(r))>-1;)e(t).before(document.createTextNode(c.substr(0,a))).before(s(c.substr(a,r.length))).before(document.createTextNode(c.substr(a+r.length))),i=t.previousSibling,e(t).remove(),t=i,c=t.nodeValue},queryStringValue:function(e,t){var r,s;if(e.indexOf("?")<0)return"";for(e=e.substr(e.indexOf("?")+1);e.indexOf("=")>=0;)if(e=e.replace(/^\&*/,""),s=e.split("&",1)[0],e=e.substr(s.length),r=s.match(t))return decodeURIComponent(r[r.length-1].replace(/\+/g," "));return""},termsFromReferrer:function(){var t,r,s;if(!(t=null!==e.fn.highlightSearchTerms._test_referrer?e.fn.highlightSearchTerms._test_referrer:document.referrer))return"";for(r=0;r<this.referrers.length;r+=1)if(s=this.referrers[r],t.match(s.address))return this.queryStringValue(t,s.key);return""},cleanTerms:function(t){var r=this;return e.unique(e.map(t,function(t){return t=e.trim(r.caseInsensitive?t.toLowerCase():t),!t||r.filterTerms.test(t)?null:t}))},getSearchTerms:function(){var t=[],r=null!==e.fn.highlightSearchTerms._test_location?e.fn.highlightSearchTerms._test_location:location.href;return this.useReferrer&&e.merge(t,this.termsFromReferrer().split(/\s+/)),this.useLocation&&e.merge(t,this.queryStringValue(r,this.searchKey).split(/\s+/)),t}},r=function(e){return"string"==typeof e?new RegExp("^"+e+"=(.*)$","i"):e},s=function(e){return"string"==typeof e?new RegExp("^https?://(www\\.)?"+e,"i"):e},e.fn.highlightSearchTerms=function(a){if(a=e.extend({},n,a),a=e.extend(a,{searchKey:r(a.searchKey),referrers:e.map(a.referrers,function(e){return{address:s(e.address),key:r(e.key)}})}),a.includeOwnDomain){var i=null!==e.fn.highlightSearchTerms._test_location?e.fn.highlightSearchTerms._test_location:location.hostname;a.referrers.push({address:s(i.replace(/\./g,"\\.")),key:a.searchKey})}return new t(a).highlight(this),this},e.fn.highlightSearchTerms.referrers=[{address:"google\\.",key:"q"},{address:"search\\.yahoo\\.",key:"p"},{address:"search\\.msn\\.",key:"q"},{address:"search\\.live\\.",key:"query"},{address:"search\\.aol\\.",key:"userQuery"},{address:"ask\\.com",key:"q"},{address:"altavista\\.",key:"q"},{address:"feedster\\.",key:"q"}],n={terms:[],useLocation:!0,searchKey:"(searchterm|SearchableText)",useReferrer:!0,referrers:e.fn.highlightSearchTerms.referrers,includeOwnDomain:!1,caseInsensitive:!0,filterTerms:/(\bnot\b|\and\b|\bor\b)/i,highlightClass:"highlightedSearchTerm"},e.fn.highlightSearchTerms._test_location=null,e.fn.highlightSearchTerms._test_referrer=null,e.fn.highlightSearchTerms._highlighter=t}(jQuery),jQuery(function(e){e(".searchResults").highlightSearchTerms({includeOwnDomain:!1})}),define("jquery.highlightsearchterms",function(){}),function(){"use strict";var e=!1,t=function(e,t){void 0!==t.item&&t.item.currentFolder&&e.preventDefault()},r=function(t,r){if(r.item.currentFolder){t.preventDefault();var s=$(t.currentTarget).find("#live_searchbox_currentfolder_only");$("#searchbox_currentfolder_only");s.trigger("change"),e=!0}else window.location=r.item.url},s=function(){var s=$(".searchField");if($(".searchField").length){s.val("");var n=1===$("base").length?$("base").attr("href"):$("body").data("base-url"),a={source:n.replace(/\/$/,"")+"/ftw_solr_livesearch_reply",minLength:3,select:r,focus:t,appendTo:".LSBox",messages:{noResults:$("#search-no-results-message").text(),results:function(e){return e-=$(".ui-menu-item .no-result").length,0!==e?($("#search-no-results-message").attr("aria-hidden",!0),e>1?($("#search-amount-results-found-message").attr("aria-hidden",!1),e+$("#search-amount-results-found-message").text()):($("#search-one-result-found-message").attr("aria-hidden",!1),e+$("#search-one-result-found-message").text())):($("#search-amount-results-found-message").attr("aria-hidden",!0),$("#search-one-result-found-message").attr("aria-hidden",!0),$("#search-no-results-message").attr("aria-hidden",!1),$("#search-no-results-message").text())}}},i=function(e,t){var r=this;1!==$("body.portaltype-plone-site").length&&t.unshift({firstOfGroup:!1,currentFolder:!0,title:"Current folder",url:""}),$.each(t,function(t,s){r._renderItemData(e,s)}),$("#searchbox_currentfolder_only",e).attr("id","live_searchbox_currentfolder_only"),$("[for='searchbox_currentfolder_only']",e).attr("for","live_searchbox_currentfolder_only"),$(".folder_path",e).on("change",function(){this.checked?r.option("source",a.source+"?path="+this.value):r.option("source",a.source),$("#currentfolder_item .folder_path").prop("checked",this.checked),r.search()})},c=function(e,t){var r={label:t.title,value:t.title,url:t.url};if(t.currentFolder)return r.currentFolder=!0,e.append($("#currentfolder_item").children().clone().data("ui-autocomplete-item",r));var s,n=$("<li>").data("ui-autocomplete-item",r),a=$("<a>").attr("href",t.url).addClass(t.cssclass),i=$("<span>").text(t.title).addClass("title");s="no-result"==t.cssclass?t.description?$("<span>"+t.description+"</span>"):$("<span />"):$("<span>").text($("<div />").html(t.description).text()),s.addClass("description");var c=$("<div>").append(i).append(s);if(t.firstOfGroup){n.addClass("firstOfGroup");var o=$("<span>").text(t.type).addClass("group");n.append(o)}return a.append(t.icon).append(c),n.append(a),e.append(n)},o=$.ui.autocomplete(a,s);o._renderItem=c,o._renderMenu=i,s.on("focus",function(){o.search()}),$(".folder_path").prop("checked",!1);var h=o.close;o.close=function(t){t&&"blur"===t.type||e?t.preventDefault():h.call(o)},$(document).on("mousedown click",function(t){e=!1,$(t.target).is("#searchGadget")||$(t.target).parents(".ui-autocomplete").length||o.close()})}};$(s)}(window),define("livesearch",function(){}),require(["facets","jquery.highlightsearchterms","livesearch"],function(e,t,r){}),define("main",function(){});
